refactor file api & add authorization

--- a/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
+++ b/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
@@ -68,4 +68,7 @@ notification.id.not-found=Không tìm thấy mã ID (UUID) trùng khớp với t
 notification.description.size=Độ dài thông báo phải từ {min} tới {max} ký tự
 notification.description.not-blank=Chi tiết thông báo không được bỏ trống
 notification.status.not-null=Trạng thái thông báo không được bỏ trống
+#--------------------NOTIFICATION------------------
+file.deleted = Xóa file thành công
+file.uploaded = Upload file thành công
 
