--- a/CRM-Update-Final-Project-FE/package.json
+++ b/CRM-Update-Final-Project-FE/package.json
@@ -17,9 +17,11 @@
     "@angular/forms": "^14.2.0",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
-    "@angular/router": "^14.2.0",
+    "@angular/router": "^14.2.6",
+    "@ngx-translate/core": "^14.0.0",
     "bootstrap": "^5.2.2",
     "ngx-webstorage": "^10.0.1",
+    "router": "^1.3.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
