Handle Project table in FE

--- a/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
+++ b/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
@@ -48,6 +48,7 @@ project.name.not-blank=Tên dự án không được bỏ trống
 project.description.size=Chi tiết dự án phải từ {min} đến {max} ký tự
 project.description.not-blank=Chi tiết dự án không được bỏ trống
 project.symbol.size=Mã biểu tượng phải từ {min} đến {max} ký tự
+project.symbol.saved=Lưu symbol thành công
 #------------------------TASK-----------------------
 task.existed=Công việc đã tồn tại (trùng tên)
 task.deleted=Xóa công việc thành công
