FE-handle-user-and-task-table

--- a/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
+++ b/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
@@ -32,6 +32,7 @@ user.firstName.not-blank=Tên người dùng không được bỏ trống
 user.lastName.size=Họ người dùng phải từ {min} đến {max} ký tự
 user.lastName.not-blank=Họ người dùng không được bỏ trống
 user.avatar.size=Độ dài url avatar phải từ {min} đến {max} ký tự
+user.gender.not-null=Giới tính người dùng không được bỏ trống
 user.email.size=Email phải từ {min} đến {max} ký tự
 user.email.not-blank=Email không được bỏ trống
 user.facebookUrl.size=Độ dài url facebook phải từ {min} đến {max} ký tự
@@ -49,6 +50,7 @@ project.description.size=Chi tiết dự án phải từ {min} đến {max} ký 
 project.description.not-blank=Chi tiết dự án không được bỏ trống
 project.symbol.size=Mã biểu tượng phải từ {min} đến {max} ký tự
 project.symbol.saved=Lưu symbol thành công
+project.status.not-null=Trạng thái dự án không được bỏ trống
 #------------------------TASK-----------------------
 task.existed=Công việc đã tồn tại (trùng tên)
 task.deleted=Xóa công việc thành công
