FE handle CRUD project, user and task data

--- a/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
+++ b/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
@@ -20,9 +20,12 @@ operation.description.size=Chi tiết chức năng phải từ {min} đến {max
 operation.description.not-blank=Chi tiết chức năng không được bỏ trống
 operation.type.not-null=Loại chức năng không được bỏ trống
 #-------------------USER-------------------------
+user.saved=Tạo người dùng thành công
+user.updated=Cập nhật người dùng thành công
 user.existed=Người dùng đã tồn tại (Trùng username hoặc email)
 user.deleted=Xóa người dùng thành công
 user.id.not-found=Không tìm thấy mã ID (UUID) trùng khớp với người dùng
+user.username.not-found=Không tìm thấy username trùng khớp
 user.username.size=Tài khoản phải từ {min} đến {max} ký tự
 user.username.not-blank=Tài khoản không được bỏ trống
 user.password.size=Mật khẩu phải từ {min} đến {max} ký tự
@@ -41,9 +44,12 @@ user.department.size=Độ dài bộ phận phải từ {min} đến {max} ký t
 user.hobbies.size=Độ dài sở thích phải từ {min} đến {max} ký tự
 user.accountStatus.not-null=Trạng thái tài khoản người dùng không được bỏ trống
 #-----------------------PROJECT-----------------------
+project.saved=Lưu dự án thành công
+project.updated=Cập nhật dự án thành công
 project.existed=Dự án đã tồn tại (Trùng tên dự án)
 project.deleted=Xóa dự án thành công
 project.id.not-found=Không tìm thấy mã ID (UUID) trùng khớp với dự án
+project.name.not-found=Không tìm thấy tên dự án trùng khớp
 project.name.size=Độ dài tên dự án phải từ {min} đến {max} ký tự
 project.name.not-blank=Tên dự án không được bỏ trống
 project.description.size=Chi tiết dự án phải từ {min} đến {max} ký tự
@@ -51,8 +57,14 @@ project.description.not-blank=Chi tiết dự án không được bỏ trống
 project.symbol.size=Mã biểu tượng phải từ {min} đến {max} ký tự
 project.symbol.saved=Lưu symbol thành công
 project.status.not-null=Trạng thái dự án không được bỏ trống
+project.creatorUsername.size = Tên của người tạo dự án phải từ {min} đến {max} ký tự
+project.creatorUsername.not-blank = Tên của người tạo dự án không được bỏ trống
+project.leaderUsername.size = Tên của người quản lý dự án phải từ {min} đến {max} ký tự
+project.leaderUsername.not-blank = Tên của người quản lý dự án không được bỏ trống
 #------------------------TASK-----------------------
 task.existed=Công việc đã tồn tại (trùng tên)
+task.saved=Tạo công việc thành công
+task.updated=Cập nhật công việc thành công
 task.deleted=Xóa công việc thành công
 task.id.not-found=Không tìm thấy mã ID (UUID) trùng khớp với công việc
 task.name.size=Độ dài tên công việc phải từ {min} đến {max} ký tự
@@ -60,6 +72,8 @@ task.name.not-blank=Tên công việc không được bỏ trống
 task.description.size=Chi tiết công việc phải từ {min} đến {max} ký tự
 task.description.not-blank=Chi tiết công việc không được bỏ trống
 task.status.not-null=Trạng thái công việc không được bỏ trống
+task.reporterUsername.size=Độ dài tên của người báo cáo phải từ {min} đến {max} ký tự
+task.reporterUsername.not-blank=Tên của người báo cáo không được bỏ trống
 #---------------------COMMENT----------------------
 comment.deleted=Xóa bình luận thành công
 comment.id.not-found=Không tim thấy mã ID (UUID) trùng khớp với bình luận
