--- a/CRM-Update-Final-Project-FE/package.json
+++ b/CRM-Update-Final-Project-FE/package.json
@@ -17,11 +17,13 @@
     "@angular/core": "^14.2.0",
     "@angular/forms": "^14.2.0",
     "@angular/material": "^14.2.5",
+    "@angular/material-moment-adapter": "^14.2.6",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.6",
     "@ngx-translate/core": "^14.0.0",
     "bootstrap": "^5.2.2",
+    "ngx-toastr": "^15.2.1",
     "ngx-webstorage": "^10.0.1",
     "router": "^1.3.7",
     "rxjs": "~7.5.0",
