--- a/CRM-Update-Final-Project-FE/package.json
+++ b/CRM-Update-Final-Project-FE/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^14.2.6",
     "@ngx-translate/core": "^14.0.0",
     "bootstrap": "^5.2.2",
+    "moment": "^2.29.4",
     "ngx-toastr": "^15.2.1",
     "ngx-webstorage": "^10.0.1",
     "router": "^1.3.7",
