FE update user profile and refactor Login API

--- a/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
+++ b/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
@@ -22,8 +22,10 @@ operation.type.not-null=Loại chức năng không được bỏ trống
 #-------------------USER-------------------------
 user.saved=Tạo người dùng thành công
 user.updated=Cập nhật người dùng thành công
+user.profile.updated= Cập nhật thông tin cá nhân thành công
 user.existed=Người dùng đã tồn tại (Trùng username hoặc email)
 user.deleted=Xóa người dùng thành công
+user.invalid=Người dùng không hợp lệ
 user.id.not-found=Không tìm thấy mã ID (UUID) trùng khớp với người dùng
 user.username.not-found=Không tìm thấy username trùng khớp
 user.username.size=Tài khoản phải từ {min} đến {max} ký tự
