--- a/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
+++ b/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
@@ -23,6 +23,8 @@ operation.type.not-null=Loại chức năng không được bỏ trống
 user.saved=Tạo người dùng thành công
 user.updated=Cập nhật người dùng thành công
 user.profile.updated= Cập nhật thông tin cá nhân thành công
+user.password.incorrect=Mật khẩu cũ không chính xác
+user.password.changed= Mật khẩu thay đổi thành công
 user.existed=Người dùng đã tồn tại (Trùng username hoặc email)
 user.deleted=Xóa người dùng thành công
 user.invalid=Người dùng không hợp lệ
