--- a/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
+++ b/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
@@ -79,6 +79,7 @@ task.status.not-null=Trạng thái công việc không được bỏ trống
 task.reporterUsername.size=Độ dài tên của người báo cáo phải từ {min} đến {max} ký tự
 task.reporterUsername.not-blank=Tên của người báo cáo không được bỏ trống
 #---------------------COMMENT----------------------
+comment.saved=Bình luận thành công
 comment.deleted=Xóa bình luận thành công
 comment.id.not-found=Không tim thấy mã ID (UUID) trùng khớp với bình luận
 comment.description.size=Độ dài bình luận phải từ {min} tới {max} ký tự
