FE refactor AOP Authorization and File API

--- a/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
+++ b/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
@@ -1,5 +1,6 @@
 #----------------COMMON--------------------
 id.invalid=Mã ID (UUID) không hợp lệ
+unauthorized=Bạn không có quyền truy cập API này
 #----------------ROLE----------------------
 role.existed=Quyền đã tồn tại (trùng tên hoặc mã quyền)
 role.deleted=Xóa quyền thành công
@@ -91,6 +92,10 @@ notification.description.size=Độ dài thông báo phải từ {min} tới {ma
 notification.description.not-blank=Chi tiết thông báo không được bỏ trống
 notification.status.not-null=Trạng thái thông báo không được bỏ trống
 #--------------------NOTIFICATION------------------
+file.uncreated = Không thể tạo được file
+file.load.error = Không load được file
+file.load-all.error = Không load được tất cả file
+file.unsaved = Không thể lưu được file
 file.deleted = Xóa file thành công
 file.uploaded = Upload file thành công
 
