Add or remove users in project

--- a/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
+++ b/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
@@ -66,6 +66,8 @@ project.creatorUsername.size = Tên của người tạo dự án phải từ {m
 project.creatorUsername.not-blank = Tên của người tạo dự án không được bỏ trống
 project.leaderUsername.size = Tên của người quản lý dự án phải từ {min} đến {max} ký tự
 project.leaderUsername.not-blank = Tên của người quản lý dự án không được bỏ trống
+project.add-user.successfully = Thêm người dùng vào dự án thành công
+project.remove-user.successfully = Gỡ người dùng khỏi dự án thành công
 #------------------------TASK-----------------------
 task.existed=Công việc đã tồn tại (trùng tên)
 task.saved=Tạo công việc thành công
