FE-Refactor header and manage User's roles

--- a/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
+++ b/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
@@ -48,6 +48,7 @@ user.occupation.size=Độ dài nghề nghiệp phải từ {min} đến {max} k
 user.department.size=Độ dài bộ phận phải từ {min} đến {max} ký tự
 user.hobbies.size=Độ dài sở thích phải từ {min} đến {max} ký tự
 user.accountStatus.not-null=Trạng thái tài khoản người dùng không được bỏ trống
+user.role.updated = User roles have been updated
 #-----------------------PROJECT-----------------------
 project.saved=Lưu dự án thành công
 project.updated=Cập nhật dự án thành công
