FE refactor fetching data

--- a/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
+++ b/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
@@ -1,6 +1,10 @@
 #----------------COMMON--------------------
 id.invalid=Mã ID (UUID) không hợp lệ
 unauthorized=Bạn không có quyền truy cập API này
+#-------------ACCOUNT----------------------
+account.username.not-found = Username not found
+account.password.incorrect = Password is incorrect
+account.blocked = Your account is blocked. Please contact Administrator for further information
 #----------------ROLE----------------------
 role.existed=Quyền đã tồn tại (trùng tên hoặc mã quyền)
 role.deleted=Xóa quyền thành công
