--- a/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
+++ b/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
@@ -78,6 +78,7 @@ task.existed=Công việc đã tồn tại (trùng tên)
 task.saved=Tạo công việc thành công
 task.updated=Cập nhật công việc thành công
 task.deleted=Xóa công việc thành công
+task.completed = Công việc đã hoàn thành
 task.id.not-found=Không tìm thấy mã ID (UUID) trùng khớp với công việc
 task.name.size=Độ dài tên công việc phải từ {min} đến {max} ký tự
 task.name.not-blank=Tên công việc không được bỏ trống
