--- a/CRM-Update-Final-Project-FE/package.json
+++ b/CRM-Update-Final-Project-FE/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.6",
     "@ngx-translate/core": "^14.0.0",
+    "apexcharts": "^3.36.3",
     "bootstrap": "^5.2.2",
     "moment": "^2.29.4",
+    "ng-apexcharts": "^1.7.4",
     "ngx-toastr": "^15.2.1",
     "ngx-webstorage": "^10.0.1",
     "router": "^1.3.7",
