--- a/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
+++ b/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
@@ -95,15 +95,24 @@ comment.description.size=Độ dài bình luận phải từ {min} tới {max} k
 comment.description.not-blank=Chi tiết bình luận không được bỏ trống
 #--------------------NOTIFICATION------------------
 notification.deleted=Xóa thông báo thành công
+notification.read = Đọc thông báo thành công
 notification.id.not-found=Không tìm thấy mã ID (UUID) trùng khớp với thông báo
 notification.description.size=Độ dài thông báo phải từ {min} tới {max} ký tự
 notification.description.not-blank=Chi tiết thông báo không được bỏ trống
 notification.status.not-null=Trạng thái thông báo không được bỏ trống
-#--------------------NOTIFICATION------------------
+
+notification.add-leader-to-project = {0} has added you to new project "{1}" as a leader
+notification.remove-leader-from-project = {0} has removed you as a leader from project "{1}"
+notification.add-staff-to-project = {0} has added you to project "{1}"
+notification.remove-staff-from-project = {0} has removed you from project "{1}"
+notification.add-staff-to-task = {0} has assigned you to a new task "{1}"
+notification.remove-staff-from-task = {0} has removed you from a task "{1}"
+#--------------------FILE------------------
 file.uncreated = Không thể tạo được file
 file.load.error = Không load được file
 file.load-all.error = Không load được tất cả file
 file.unsaved = Không thể lưu được file
 file.deleted = Xóa file thành công
 file.uploaded = Upload file thành công
+
 
