--- a/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
+++ b/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
@@ -101,10 +101,12 @@ notification.description.size=Độ dài thông báo phải từ {min} tới {ma
 notification.description.not-blank=Chi tiết thông báo không được bỏ trống
 notification.status.not-null=Trạng thái thông báo không được bỏ trống
 
-notification.add-leader-to-project = {0} has added you to new project "{1}" as a leader
-notification.remove-leader-from-project = {0} has removed you as a leader from project "{1}"
-notification.add-staff-to-project = {0} has added you to project "{1}"
-notification.remove-staff-from-project = {0} has removed you from project "{1}"
+notification.leader.manager-add-leader-to-project = {0} has added you to new project "{1}" as a leader
+notification.leader.manager-remove-leader-from-project = {0} has removed you as a leader from project "{1}"
+notification.leader.manager-add-staff-to-project = {0} has added {1} to project "{2}"
+notification.leader.manager-remove-staff-from-project = {0} has removed {1} to project "{2}"
+notification.staff.manager-add-staff-to-project = {0} has added you to project "{1}"
+notification.staff.manager-remove-staff-from-project = {0} has removed you from project "{1}"
 notification.add-staff-to-task = {0} has assigned you to a new task "{1}"
 notification.remove-staff-from-task = {0} has removed you from a task "{1}"
 #--------------------FILE------------------
