BE refactor code and add some test

--- a/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
+++ b/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
@@ -110,6 +110,9 @@ notification.staff.manager-add-staff-to-project = {0} has added you to project "
 notification.staff.manager-remove-staff-from-project = {0} has removed you from project "{1}"
 notification.add-staff-to-task = {0} has assigned you to a new task "{1}"
 notification.remove-staff-from-task = {0} has removed you from a task "{1}"
+
+notification.login-from-another-device = Your account has been logged in from another device. \
+  Please contact the administrator for further information
 #--------------------FILE------------------
 file.uncreated = Không thể tạo được file
 file.load.error = Không load được file
