--- a/CRM-Update-Final-Project-BE/src/main/resources/application.yml
+++ b/CRM-Update-Final-Project-BE/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     url: jdbc:postgresql://localhost:5432/postgres
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     show-sql: true
     generate-ddl: true
 springdoc:
