--- a/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
+++ b/CRM-Update-Final-Project-BE/src/main/resources/validation/ValidationMessages.properties
@@ -95,6 +95,7 @@ comment.id.not-found=Không tim thấy mã ID (UUID) trùng khớp với bình l
 comment.description.size=Độ dài bình luận phải từ {min} tới {max} ký tự
 comment.description.not-blank=Chi tiết bình luận không được bỏ trống
 #--------------------NOTIFICATION------------------
+notification.unsubscribed = Unsubscribed notification
 notification.deleted=Xóa thông báo thành công
 notification.read = Đọc thông báo thành công
 notification.id.not-found=Không tìm thấy mã ID (UUID) trùng khớp với thông báo
